Fixed memory leak when parsing a brush fails

A GXPSBrush struct is leaked when parsing fails for a child of a
XXX.Fill or XXX.Stroke element.  Parsing is aborted when invalid data
is encountered and cleanup code is not run.  This adds a error handler
to the brush GMarkupParser to free the struct on error.

https://bugzilla.gnome.org/show_bug.cgi?id=668968